Closed Bug 1884009 Opened 7 months ago Closed 7 months ago

tools/profiler/public/GeckoTraceEvent.h:835:13: error: unused variable 'num_args' [-Werror,-Wunused-variable]

Categories

(Core :: Gecko Profiler, defect)

defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox125 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

When building with --enable-project=mobile/ios --enable-warnings-as-errors:

 0:02.37 /tmp/gecko-ios/tools/profiler/public/GeckoTraceEvent.h:835:13: error: unused variable 'num_args' [-Werror,-Wunused-variable]
 0:02.37   835 |   const int num_args = 1;
 0:02.38       |             ^~~~~~~~
 0:02.38 /tmp/gecko-ios/tools/profiler/public/GeckoTraceEvent.h:851:13: error: unused variable 'num_args' [-Werror,-Wunused-variable]
 0:02.38   851 |   const int num_args = 2;
 0:02.38       |             ^~~~~~~~
 0:02.38 /tmp/gecko-ios/tools/profiler/public/GeckoTraceEvent.h:852:15: error: unused variable 'arg_names' [-Werror,-Wunused-variable]
 0:02.38   852 |   const char* arg_names[2] = {arg1_name, arg2_name};
 0:02.38       |               ^~~~~~~~~

--disable-gecko-profiler --enable-warnings-as-errors would yield the same error.

Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/3a7538c9b373 Avoid warnings about unused arguments when building with profiler disabled. r=padenot
Status: NEW → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: