Bug 1884009 - Avoid warnings about unused arguments when building with profiler disabled. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D203837